<resources>
    <string name="app_name">InstagramMainPage</string>

    // Icon Content Description
    <string name="camera">Camera</string>
    <string name="logo">Logo</string>
    <string name="direct">Direct</string>
    <string name="like">Like</string>
    <string name="more">More</string>
    <string name="comment">Comment</string>
    <string name="collect">Collect</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="search">Search</string>

    // Icon tag
    <string name="ic_tag_border">border</string>
    <string name="ic_tag_fill">fill</string>

    // Post
    <string name="post_image">post image</string>
    <string name="view_all">View all %d comments</string>
    <string name="date">2 days ago</string>
    <string name="likes">%d likes</string>
    <string name="saved">Saved</string>
    <string name="save_to_collection">Save to Collection</string>

    // Ad
    <string name="kotlin">Kotlin</string>
    <string name="caption">Kotlin is better than Java! Join us!</string>
    <string name="learn_more">Learn More</string>
    <string name="sponsored">Sponsored</string>

    // Recommendation
    <string name="recommended">Recommended</string>
    <string name="suggested_for_you">Suggested for You</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="see_all">See All</string>

    // Stories
    <string name="your_story">Your Story</string>


</resources>